# Progetto_Programmazione

./: Achievement.cpp  Achievement.h  Animation.cpp  Animation.h  Button.cpp  Button.h  CMakeLists.txt  CharacterSelectionState.cpp  CharacterSelectionState.h  Checkbox.cpp  Checkbox.h  DropDownMenu.cpp  DropDownMenu.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameCharacter.cpp  GameCharacter.h  GameState.cpp  GameState.h  Hitbox.cpp  Hitbox.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Map.cpp  Map.h  MenuState.cpp  MenuState.h  Observer.h  OptionState.cpp  OptionState.h  PlayableCharacter.cpp  PlayableCharacter.h  Projectile.cpp  Projectile.h  README.md  ResourceManager.cpp  (+5 more)
Config/: window.ini
Google_tests/: CMakeLists.txt  Enemy_test.cpp  Item_test.cpp  Map_test.cpp  Test1.cpp  runAllTest.cpp
Google_tests/lib/docs/: gmock_cook_book.md  gmock_for_dummies.md
Google_tests/lib/googletest/: README.md
Google_tests/lib/googletest/cmake/: internal_utils.cmake
