cmake_minimum_required(VERSION 3.22)
project(Progetto_Programmazione)
add_subdirectory(Google_tests)
set(CMAKE_CXX_STANDARD 14)
set(SOURCE_FILES main.cpp Game.cpp Game.h States.cpp States.h MenuState.cpp MenuState.h Button.cpp Button.h DropDownMenu.cpp DropDownMenu.h OptionState.cpp OptionState.h Checkbox.cpp Checkbox.h GameState.cpp GameState.h PlayableCharacter.cpp PlayableCharacter.h GameCharacter.cpp GameCharacter.h Animation.cpp Animation.h ResourceManager.cpp ResourceManager.h Map.cpp Map.h Hitbox.cpp Hitbox.h Enemy.cpp Enemy.h Item.cpp Item.h Projectile.cpp Projectile.h)
add_executable(Progetto_Programmazione main.cpp)
add_library(core ${SOURCE_FILES})
target_link_libraries(core sfml-system sfml-window sfml-graphics sfml-audio)
target_link_libraries(${PROJECT_NAME} core)